# 2DPoisson

./: README
src/: CMakeLists.txt
src/include/: grid.hpp  level.hpp  matrices.hpp  smoothers.hpp  vcycle.hpp  vector.hpp
src/lib/: matrices.cpp
tests/: CMakeLists.txt  matvec_t.cpp  test_jacobi_t.cpp  vcycle_t.cpp  vector_t.cpp
