cmake_minimum_required(VERSION 3.16.3)

project(poisson)
set(CMAKE_INSTALL_PREFIX /store/CETQCD3/tw601/code/2DPoisson)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(OpenMP)
if (OPENMP_FOUND)
	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a ${OpenMP_CXX_FLAGS}")
	set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
add_library(${PROJECT_NAME} lib/matrices.cpp lib/smoothers.cpp)
install(TARGETS ${PROJECT_NAME} DESTINATION lib)
